--- a/note-app.html
+++ b/note-app.html
@@ -5,6 +5,7 @@
         <!-- Import Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        
         <!-- Import CSS and JS Files -->
         <link href="note-app.css" rel="stylesheet">
         <script src="note-app.js"></script>
@@ -13,6 +14,12 @@
         <!-- Allow Mobile responsiveness -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- Flavicon Tab icon/image -->
+        <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+
         <!-- Import Awesome 5 icons -->
         <script src="https://kit.fontawesome.com/3c19d22a4f.js" crossorigin="anonymous"></script>
 
@@ -20,8 +27,6 @@
 
     <body id="body">
         <div class="page-container" id="page-container">
-
-        
             <div class="title-container">
                 <h1 class="app-name"><b>Note-Taking App</b></h1>
             </div>
@@ -43,5 +48,9 @@
                 </div>
             </div>
         </div>
+
+        <footer class="footer">
+            <a class="footer-top" href="../portfolio/index.html">RETURN TO MY PORTFOLIO</div>
+        </footer>
     </body>
 </html>
